--- a/cart.html
+++ b/cart.html
@@ -90,7 +90,7 @@
 
     .item-price .price-text {
         color: red;
-        font-size: 11px;
+        font-size: 13px;
         /* Adjust this value to your desired font size */
     }
 
@@ -100,7 +100,9 @@
         justify-content: space-between;
         padding: 10px 0;
         margin-top: 10px;
-        font-size: 11px;
+        font-size: 15px;
+        color: red;
+       
     }
 
     .payment-method{
