--- a/index.html
+++ b/index.html
@@ -383,6 +383,11 @@
         crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
+
+       <!-- Floating WhatsApp Button -->
+       <a href="https://wa.me/254757024304" target="_blank" class="whatsapp-float">
+        <img src="images/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+    </a>
     
     <footer id="footer" class="footer custom-bg-blue hidden">
         <div class="container">
