--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
                     <ul class="navbar-nav flex-grow-1 justify-content-center">
                         <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2 justify-content-center" type="search"
-                                placeholder="Search" aria-label="Search">
+                            <input class="form-control mr-sm-2 justify-content-center" type="search" id="search-bar" placeholder="Search" aria-label="Search" list="suggestions">
+                            <datalist id="suggestions"></datalist>
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                         </form>
                         <li class="nav-item active">
@@ -101,7 +101,7 @@
         class="container mt-5 hidden">
             <!-- Main Content -->
     <div class="admin-panel mt-5 pt-3">
-        <div id="carouselExampleIndicators" class="carousel slide style="padding-top: 10px; background-color:#fff" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" style="margin-top: 3px; padding-top: 10px; background-color: #fff; border-radius: 3px; overflow: hidden;" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -109,13 +109,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 1">
+                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 1" style="border-radius: 15px;">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ban2.jpg" class="d-block w-100" alt="Banner 2">
+                    <img src="images/ban2.jpg" class="d-block w-100" alt="Banner 2" style="border-radius: 15px;">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 3">
+                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 3" style="border-radius: 15px;">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -127,11 +127,12 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        
         <div class="container">
-            <!-- Container for the books -->
+            <!-- Container for the items -->
             <div class="category">
                 <div class="books-container row">
-                    <!-- Books will be injected here by JavaScript -->
+                    <!-- items will be injected here by JavaScript -->
                 </div>
             </div>
         </div>
@@ -145,7 +146,9 @@
     </nav>
         <!-- <h5>School Uniforms</h5> -->
         <!-- Product Display Section -->
-        <div id="product-list" class="row mt-4"></div>
+        <div id="product-list" class="row mt-4">
+
+        </div>
     </div>
 <!-- New Product Details Container -->
 <div id="product-details-container" class="container hidden" style="margin-top: 60px;">
