--- a/cart.html
+++ b/cart.html
@@ -172,8 +172,8 @@
         padding: 10px 0;
         border-top: 1px solid #fff;
         border-bottom: 1px solid #fff;
-        margin-top: 15px;
-        font-size: 11px;
+        margin-top: 10px;
+        font-size: 12px;
     }
 
     .shipping-info button {
@@ -602,7 +602,7 @@ svg {
         width: 20px; /* Adjust line width for smaller screens */
     }
     .container-outer{
-    margin-top: 50px;
+    margin-top: 60px;
 }
 }
 
@@ -611,7 +611,7 @@ svg {
         font-size: 12px; /* Further reduced font size for extra small screens */
     }
     .container-outer{
-    margin-top: 50px;
+    margin-top: 60px;
 }
     .nav-link {
         font-size: 10px; /* Further reduced font size for extra small screens */
@@ -637,7 +637,7 @@ svg {
                         <div class="navbar-brand" style="font-weight: bold; color: #d9534f; font-size: 15px;background-color: white;">
                             JOLLY UNIFORMS
                         </div>
-                        <div style="font-size: 12px; color: #777; margin-top: -4px;">Affordable Online Shopping</div>
+                        <div style="font-size: 12px; color: #777; margin-top: -4px;">Reliable Online Shopping</div>
                     </div>
                 </div>
     
@@ -699,7 +699,7 @@ svg {
                     style="background-color: #0a4a8e; color: white; white-space: normal; width: 100%; max-width: 100px;"
                     onmouseover="this.style.backgroundColor='#083e73';"
                     onmouseout="this.style.backgroundColor='#0a4a8e';">
-                    Place Order
+                    PLACE ORDER
                 </button>
             </div>
         </div>
