--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         class="container mt-5 hidden">
             <!-- Main Content -->
     <div class="admin-panel mt-5 pt-3">
-        <div id="carouselExampleIndicators" class="carousel slide" style="margin-top: 3px; padding-top: 10px; background-color: #fff; border-radius: 3px; overflow: hidden;" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" style="margin-top: 3px; padding-top: 10px; background-color: #fff;  overflow: hidden;" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -109,13 +109,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 1" style="border-radius: 15px;">
+                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 1" style="border-radius: 5px;">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ban2.jpg" class="d-block w-100" alt="Banner 2" style="border-radius: 15px;">
+                    <img src="images/ban2.jpg" class="d-block w-100" alt="Banner 2" style="border-radius: 5px;">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 3" style="border-radius: 15px;">
+                    <img src="images/ban1.png" class="d-block w-100" alt="Banner 3" style="border-radius: 5px;">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
