--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
          font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
         class="container mt-5 hidden">
             <!-- Main Content -->
-    <div class="admin-panel mt-5 pt-3">
+    <div class="carousel mt-5 pt-3">
         <div id="carouselExampleIndicators" class="carousel slide" style="margin-top: 3px; padding-top: 10px; background-color: #fff;  overflow: hidden;" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
