--- a/cart.html
+++ b/cart.html
@@ -85,12 +85,13 @@
 
     .item-details {
         flex-grow: 1;
+        font-size: 11px;
     }
 
 
     .item-price .price-text {
-        color: red;
-        font-size: 13px;
+        color: #e74c3c;
+        font-size: 11px;
         /* Adjust this value to your desired font size */
     }
 
@@ -100,20 +101,21 @@
         justify-content: space-between;
         padding: 10px 0;
         margin-top: 10px;
-        font-size: 15px;
-        color: red;
+        font-size: 12px;
+        color: #e74c3c;
        
     }
 
 
 .payment-method-container {
-    border: 1px solid #e74c3c; /* Red border */
+    border: 1px solid red; /* Red border */
     border-radius: 5px; /* Rounded corners */
     padding: 10px;
     display: flex;
     align-items: center; /* Center content vertically */
     width: fit-content; /* Adjust width as needed */
     position: relative; /* Establishes positioning context */
+    font-size: 12px;
 }
 
 .payment-method-container::after {
@@ -130,14 +132,19 @@
 .payment-method-link {
     text-decoration: none; /* Removes default link underline */
     color: inherit; /* Keeps the text color the same */
+    font-size: 11px;
 }
 
+.payment{
+    font-size: 12px;
 
+}
 
 .payment-method {
     display: flex;
     align-items: center; /* Center items vertically */
     margin-right: 10px; /* Spacing between M-PESA logo and description */
+    font-size: 11px;
 }
 
 .payment-logo {
@@ -149,7 +156,7 @@
 .payment-text {
     font-family: 'Arial', sans-serif;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 11px;
     margin: 0;
 }
 
@@ -707,7 +714,7 @@ svg {
             </div>
         </div>
         <div class="container">
-            <span>Payment Method</span>
+            <span class="payment">Payment Method</span>
 
                 <div class="payment-method-container">
                     <div class="payment-method">
